Fix: more IE alignment, what we do page

--- a/src/assets/scss/templates/_page-what-we-do.scss
+++ b/src/assets/scss/templates/_page-what-we-do.scss
@@ -1,6 +1,7 @@
 .page-work {
 
   &__hero {
+    height: 100vh; // This is for IE as content doesn't center
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -19,6 +20,7 @@
     &__down-chevron {
       position: absolute;
       bottom: 40px;
+      left: 0;
       width: 100%;
       height: 50px;
       display: flex;
